2005-11-18  Jackson Harper  <jackson@ximian.com>

	* Control.cs: Set WS_ styles for borders, so that the driver does
	not have to retrieve the control instance to figure out what kind
	of borders it should have.
	* Form.cs: Set the WS_EX_MDICHILD flag on mdi children, so the
	driver can know its an mdi child easily.
	* XplatUIX11.cs: Get the border styles and whether the window is
	MDI from the Styles and ExStyles params instead of having to get a
	control. This prevents a chicken and egg problem.	

2005-11-18  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Fix typo so scrollbars show up correctly.

2005-11-18  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Calculate when to add and remove scrollbars
	correctly.
	* MdiChildContext.cs: Adjust the y position to take the titlebar
	into account.
	- No height for FormBorderStyle.None

2005-11-18  Jackson Harper  <jackson@ximian.com>

	* Control.cs: Allow non enum values to be used for
	InternalBorderStyle.  MDI does this to set a special border style.
	- New utility methods for converting points to/from client coords
	- Add the newly created control to the Controls collection before
	updating its style. This way UpdateStyle can walk the control
	heirarchy to find the control if needed.
	so I don't need to create a new Point object all the time.
	* Form.cs: Let MDI windows handle their border styles.
	- Set styles on MDI windows so the correct title style is derived.
	* MdiChildContext.cs: Move all the painting and window handling
	into the non client area.
	- Use correct sizing and put correct buttons on frames based on
	the FormBorderStyle.
	- Notify the mdi client about scrolling
	- Need to handle the buttons ourselves now, because they are all
	in non client areas and we can't add controls there.
	* MdiClient.cs: Halfway to scrolling, this implementation is
	somewhat broken though, we need to check to make sure other
	windows aren't causing scrolling before removing the bars. Also